<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nome_contato">Contact name</string>
    <string name="endereco">Address</string>
    <string name="telefone">Phone</string>
    <string name="tipo">Type</string>
    <string name="tamanho">Size</string>
    <string name="emConstrucao">Under construction</string>
    <string name="observacao">Note</string>
    <string name="usuario">User</string>
    <string name="senha">Password</string>
    <string name="manter_conectado">Keep connected</string>
    <string name="efetuar_login">Sign in</string>
    <string name="app_name" translatable="false">FiapImoveis</string>
    <string name="ligar">Call</string>
    <string name="enviarSMS">Send SMS</string>
    <string name="visualizar_no_mapa">Show on a map</string>
    <string name="deletar">Delete</string>
    <string name="deletado_imovel">Deleted property</string>
    <string name="imovel">Property</string>
    <string name="salvo">saved!</string>
    <string name="sobre">About</string>
    <string name="loginInvalido">Invalid login!</string>
    <string name="versao">Version:</string>
    <string name="nomeDoDesenvolvedor">Developer name:</string>
</resources>