<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <ImageView
                android:id="@+id/formulario_IvFoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#00A8EC"
                android:src="@drawable/person" />

            <Button
                android:id="@+id/formulario_botaoFoto"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:background="@drawable/fundo_camera" />
        </RelativeLayout>

        <EditText
            android:id="@+id/formulario_etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_contato" />

        <EditText
            android:id="@+id/formulario_etEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/endereco"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/formulario_etTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:paddingLeft="5dp"/>

            <Spinner
                android:id="@+id/formulario_spTipoImovel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/tipoImovel"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanho"
                android:paddingLeft="5dp"/>

            <Spinner
                android:id="@+id/formulario_spTamanhoImovel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/tamanhoImovel" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/formulario_ckEmConstrucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emConstrucao" />

        <EditText
            android:id="@+id/formulario_etObservacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/observacao"
            android:inputType="textMultiLine|text"
            android:maxLines="5"
            android:minLines="3" />

    </LinearLayout>

</ScrollView>